Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,23 +1,23 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 14.07.2024 14:43:13</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.07.2024 07:02:40</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
 <td>
-<table class="table"><table class="table">
+<table class="table"><tr><td class="menuWeight"></td><td class="menuName"></td><td class="menuPrice"></td></tr><table class="table">
 <tbody>
-<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
+<h5 class="border_box_title">Polévky </h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Italská tomatová s pestem</td><td class="menuPrice">42,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky </h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar s nudlemi</td><td class="menuPrice">39,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborová s houbami</td><td class="menuPrice">42,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažené rybí filé, vařené nové brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Plněný paprikový lusk v rajské omáčce, dušená jasmínová rýže</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Znojemská hovězí pečeně, kynuté houskové knedlíky</td><td class="menuPrice">162,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Plněné bramborové knedlíky uzeným masem, dušené bílé zelí, restovaná cibulka</td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: Dorůžova pečená vepřová panenka na restovaných fazolových luskách, celerové hranolky, zakysaná smetana</td><td class="menuPrice">185,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny lasagne s kuřecím masem, špenátem, smetanou a sýrem, hanácký salát</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou zapečený s olivami a balkánským sýrem, pečený bramborový závin (listové těsto, smetana)</td><td class="menuPrice">164,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Vepřová kotleta bez kosti na jemné houbové omáčce, restované špecle</td><td class="menuPrice">163,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Trhaný vepřový burger s ledovým salátem, tomaty, cibulí, kyselou okurkou a majonézovým dresinkem, hranolky, tatarka</td><td class="menuPrice">179,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažený vepřový řízek z kotlety bez kosti, vařené nové brambory s máslem a šnitlíkem, citrón</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Cikánská hovězí pečeně, dušená jasmínová rýže</td><td class="menuPrice">162,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Záhorácký vepřový závitek, mačkané brambory s máslem a cibulkou</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí nudličky po čínsku se zeleninou, hranolky</td><td class="menuPrice">158,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová strava: 150g Steak z kuřecích prsou zapečený se šunkou a sýrem, hráškové pyré, grilované rajče s parmazánem</td><td class="menuPrice">184,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové kotlety bez kosti na jemné pepřové omáčce, restované špecle</td><td class="menuPrice">164,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Medailonky z pravé hovězí svíčkové na restovaných fazolkách s anglickou slaninou, smažené krokety se sýrem, česnekový dip</td><td class="menuPrice">210,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů promíchaný majonézovým dresinkem, opečenou anglickou slaninou, filírované kuřecí prso, vařené vejce, strouhaný parmazán</td><td class="menuPrice">157,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 137,- nebo 150g  Steak z vepřové pečeně za 137,-  (pro nesledující za 177,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">137,-/177,-</td></tr></tbody>
+<h5 class="border_box_title">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </h5><tr><td class="menuWeight">insta gram</td><td class="menuName">Každý den od 15:00 do 19:00., můžeš využít insta slevu na tato jídla: 150g Smažený sýr za 137,- nebo 150g  Steak z vepřové pečeně za 137,-  (pro nesledující za 177,-Kč) Musíš si pouze o tuto cenu říct a prokázat sledován našeho instagramu na telefonu </td><td class="menuPrice">137,-/177,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Smažen sýr 45%, vařené brambory s máslem s šnitlíkem, tatarka</td><td class="menuPrice">137,-/177,-</td></tr><tr><td class="menuWeight">insta gram</td><td class="menuName">150g Steak z vepřové pečeně se žampiony a sýrem, smažené hranolky</td><td class="menuPrice">137,-/177,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45%, vařené brambory s máslem s šnitlíkem, tatarka</td><td class="menuPrice">137,-/177,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Steak z vepřové pečeně se žampiony a sýrem, smažené hranolky</td><td class="menuPrice">137,-/177,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Houba (0,2L červené víno s 0,3L colou a ledem)</td><td class="menuPrice">72,-</td></tr></tbody>
+<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Naše dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight">0,5 L</td><td class="menuName">Odnes si domů plechovková piva za super ceny. Staropramen 10° za 14,-Kč. Staropramen 11° za 16,- Kč a Staropramen 12°za 18,-Kč.  </td><td class="menuPrice">14,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52,.</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Cool nealko grep alk. 0,5%</td><td class="menuPrice">47,-</td></tr></tbody>
+<h5 class="border_box_title">Dnes na čepu</h5><tr><td class="menuWeight">0,5 L</td><td class="menuName">Odnes si domů plechovková piva za super ceny. Staropramen 10° za 14,-Kč. Staropramen 11° za 16,- Kč a Staropramen 12°za 18,-Kč.  </td><td class="menuPrice">14,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Arnoštová hořká 10° alk. 4,3%  spodně kvašené - pivovar ,,Pardubice´´</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Tanková 11° ležák alk. 4,7%  spodně kvašené - pivovar Staropramen</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">0,5</td><td class="menuName">Nové pivo od Staropramenu - Premiant extrachmel ležák, IBU 35, alk. 4,5% </td><td class="menuPrice">52</td></tr><tr><td class="menuWeight">0,5l</td><td class="menuName"> Cool nealko grep alk. 0,5%</td><td class="menuPrice">47,-</td></tr><tr><td class="menuWeight"></td><td class="menuName"> Houba (0,2L červené víno s 0,3L colou a ledem)</td><td class="menuPrice">72,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5></tbody></table></table>
@@ -30,15 +30,16 @@
 <td>
 <div class="row denni-menu" style="max-width:100%; margin:auto; margin-top:70px;">
 <div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2" style="padding:0px;"><img height="auto" src="https://mattesrestaurace.cz/img/vikend3.jpg?id=4" width="auto"/></div>
-<div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer0_a.js?v=" + Date.now() + "'><\/script>");</script>
-<script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/specialoffer1_a.js?v=" + Date.now() + "'><\/script>");</script></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
+<div class="member-intro offset-top-bottom col-md-6 col-xs-12 col-sm-12" data-animation="fadeInLeft fast" data-delay="0.2"><figure><script>document.write("<script type='text/javascript' src='https://www.menubot.cz/app/users/mattes32598458756932458985/export/dailymenu_a.js?v=" + Date.now() + "'><\/script>");</script><br/><br/><br/></figure></div><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2"><br/><a href="#" name="tyden" style="display: block;
+  position: relative;
+  top: -100px; 
+  visibility: hidden;"></a><br/><table class="dm"></table><br/><div class="member-intro offset-top-bottom col-md-12 col-xs-12 col-sm-12" data-animation="fadeInRight fast" data-delay="0.2" style="padding: 0px;"><!--<br><h2>Mattes restaurace</h2><center><p><strong><br>Plzeňský Prazdroj</strong> - tankové pivo<br>
 Volba Sládků<br>
 Kozel tmavý<br>
 Cider Kingswood<br>
 <br>
 Letní zahrada<br>
-Vytápěna zimní zahrada</p><center>--></div></div>
+Vytápěna zimní zahrada</p><center>--></div></div></div>
 </td>
 </tr>
 </table>
@@ -48,9 +49,34 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–13:30</em></div>
-<div class="nadpis">Neděle 14.7.2024 </div>
+<div class="nadpis">Pondělí 15.7.2024 </div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<span class="popup-gallery"><li class="polevka">
+<div class="polozka">Květáková polévka s grilovanou mrkví na másle 1, 3, 7</div>
+<div class="cena">40 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Krůtí steak na pomerančích, divoká rýže 1, 7</div>
+<div class="cena">175 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Vepřové medailonky, pepřová omáčka, šťouchané brambory s anglickou slaninou 1, 7</div>
+<div class="cena">175 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>350g Smetanové rizoto s kuřecím masem a baby špenátem, parmazán 1</div>
+<div class="cena">165 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">4. </span>350g Salát z trhaných listů s granátovým jablíčkem, ovocné špízky, pomerančová zálivka s limetkou, máslový toast 1</div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</span> </ul>
 </div>
 </td>
 </tr>
@@ -61,9 +87,9 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Neděle 14.7.2024 </div>
+<div class="nadpis">Pondělí 15.7.2024 </div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -84,8 +110,72 @@ Vytápěna zimní zahrada</p><center>--></div></div>
 <div class="inner">
 <h4 class="headline">POLEDNÍ MENU</h4>
 <div class="bookmarks cond">
+<div class="item js-bookmark active">
+<a class="link js-bookmark-switcher" href="#day_22798">Pondělí 15. 07.</a>
 </div>
-<p class="no-meals">Každý pracovní den je pro vás v naší Šalandě nachystáno polední menu. Ne vždy ho ale stačíme nahrát na web.</p>
+</div>
+<table class="list js-bookmark-block" id="day_22798" style="display:table;">
+<tr>
+<td class="volume"></td>
+<td class="name">
+<span class="title cond">Drůbeží vývar </span>
+<span class="allergen">(A: 1, 3, 7, 9)</span>
+<p class="desc">s nudlemi</p>
+</td>
+<td class="price cond">
+        55 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Záhorácký závitek</span>
+<span class="allergen">(A: 1, 7, 12)</span>
+<p class="desc">s mačkaným cibulovým bramborem</p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Hovězí plátek na houbách </span>
+<span class="allergen">(A: 1, 7)</span>
+<p class="desc">s dušenou rýží</p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">300g</td>
+<td class="name">
+<span class="title cond">Lasagne </span>
+<span class="allergen">(A: 1, 3, 7, 9)</span>
+<p class="desc">s boloňským ragú, sypané sýrem</p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Kuřecí steak na bylinkách </span>
+<span class="allergen">(A: 1, 9)</span>
+<p class="desc">s grilovanou zeleninou </p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">300g</td>
+<td class="name">
+<span class="title cond">Mix gril </span>
+<span class="allergen">(A: 1, 3, 7, 12)</span>
+<p class="desc">s kuřecím a vepřovým masem, cibulové kroužky, hranolky a pikantní dip </p>
+</td>
+<td class="price cond">
+        199 Kč    </td>
+</tr>
+</table>
 </div>
 </section>
 </td>
