--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 16.07.2024 07:02:27</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 16.07.2024 07:32:05</small><a id="top"></a><table ><nav id="lunchbar"><ul><li><a href="#naLedarnach" >NA LEDARNACH</a></li></ul><ul><li><a href="#Mates" >MATES</a></li></ul><ul><li><a href="#Kuta" >KUTA</a></li></ul><ul><li><a href="#liskaBistrouska" >LIŠKA BISTROUŠKA</a></li></ul><ul><li><a href="#Rybarna" >RYBARNA</a></li></ul><ul><li><a href="#uCejpu" >U Čejpů</a></li></ul><ul><li><a href="#poctivaRestaurace" >Poctivá restaurace</a></li></ul><ul><li><a href="#CSAntal" >ČS Antal</a></li></ul><ul><li><a href="#zelenyPruhJidelna" >Zelený pruh</a></li></ul><ul><li><a href="#youyouge" >Čína(2)</a></li></ul></nav >
 <table>
 <section id="naLedarnach"></section><tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
@@ -130,65 +130,10 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 <div class="inner">
 <h4 class="headline">POLEDNÍ MENU</h4>
 <div class="bookmarks cond">
-<div class="item js-bookmark">
-<a class="link js-bookmark-switcher" href="#day_22798">Pondělí 15. 07.</a>
-</div>
 <div class="item js-bookmark active">
 <a class="link js-bookmark-switcher" href="#day_22803">Úterý 16. 07.</a>
 </div>
 </div>
-<table class="list js-bookmark-block" id="day_22798">
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Záhorácký závitek</span>
-<span class="allergen">(A: 1, 7, 12)</span>
-<p class="desc">s mačkaným cibulovým bramborem</p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Hovězí plátek na houbách </span>
-<span class="allergen">(A: 1, 7)</span>
-<p class="desc">s dušenou rýží</p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
-<td class="volume">300g</td>
-<td class="name">
-<span class="title cond">Lasagne </span>
-<span class="allergen">(A: 1, 3, 7, 9)</span>
-<p class="desc">s boloňským ragú, sypané sýrem</p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
-<td class="volume">150g</td>
-<td class="name">
-<span class="title cond">Kuřecí steak na bylinkách </span>
-<span class="allergen">(A: 1, 9)</span>
-<p class="desc">s grilovanou zeleninou </p>
-</td>
-<td class="price cond">
-        169 Kč    </td>
-</tr>
-<tr>
-<td class="volume">300g</td>
-<td class="name">
-<span class="title cond">Mix gril </span>
-<span class="allergen">(A: 1, 3, 7, 12)</span>
-<p class="desc">s kuřecím a vepřovým masem, cibulové kroužky, hranolky a pikantní dip </p>
-</td>
-<td class="price cond">
-        199 Kč    </td>
-</tr>
-</table>
 <table class="list js-bookmark-block" id="day_22803" style="display:table;">
 <tr>
 <td class="volume"></td>
@@ -211,6 +156,52 @@ Vytápěna zimní zahrada</p><center>--></div></div></div>
 </td>
 <td class="price cond">
         179 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Kuřecí wrap</span>
+<span class="allergen">(A: 1, 3, 7, 12)</span>
+<p class="desc">s bylinkovým dipem a rajčatovým salátem 
+
+</p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Medailonky z vepřové panenky </span>
+<span class="allergen">(A: 1, 3, 7, 12)</span>
+<p class="desc">s  omáčkou demi glace a šťouchané brambory 
+
+</p>
+</td>
+<td class="price cond">
+        179 Kč    </td>
+</tr>
+<tr>
+<td class="volume">150g</td>
+<td class="name">
+<span class="title cond">Pomalu pečená krkovička se zelím </span>
+<span class="allergen">(A: 1, 3, 7, 10, 12)</span>
+<p class="desc">a houskovým knedlíkem 
+
+</p>
+</td>
+<td class="price cond">
+        169 Kč    </td>
+</tr>
+<tr>
+<td class="volume">300g</td>
+<td class="name">
+<span class="title cond">Mix gril </span>
+<span class="allergen">(A: 1, 3, 7, 12)</span>
+<p class="desc">s kuřecím a vepřovým masem, cibulové kroužky, hranolky a pikantní dip </p>
+</td>
+<td class="price cond">
+        199 Kč    </td>
 </tr>
 </table>
 </div>
